--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="module-1/stewart_Mod1_3.html">Assignment 1.3</a></li>
             <li><a href="module-2/Stewart_Mod2_2.html">Assignment 2.2</a></li>
-            <li><a href="module-3/Stewart_Mod3.3.html">Assignment 3.3</a></li>
+            <li><a href="module-3/Stewart_Mod3_3.html">Assignment 3.3</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
