--- a/module-4/Stewart_Mod4_2.html
+++ b/module-4/Stewart_Mod4_2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSD 340 Web Development with HTML and CSS</title>
     <!-- Link to CSS file -->
-    <link rel="stylesheet" href="Stewart_Mod4.2.css"> 
+    <link rel="stylesheet" href="Stewart_Mod4_2.css">
 </head>
 <body>
     <!--main container-->
