--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="module-2/Stewart_Mod2_2.html">Assignment 2.2</a></li>
             <li><a href="module-3/Stewart_Mod3_3.html">Assignment 3.3</a></li>
             <li><a href="module-4/Stewart_Mod4_2.html">Assignment 4.2</a></li>
+            <li><a href="module-6/Stewart_Mod6_2.html">Assignment 6.2</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
