--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Robert Stewart CSD 340 Landing Page</title>
     <!-- Added bootstrap cdn for better styling -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--Link to custom css placed after bootstrap to ensure requirements were executed correctly-->
     <link rel="stylesheet" href="site.css">
-    
+
 </head>
+
 <body>
     <div id="container">
         <h1>Robert Stewart CSD 340 Landing Page</h1>
@@ -23,6 +25,7 @@
             <li><a href="module-3/Stewart_Mod3_3.html">Assignment 3.3</a></li>
             <li><a href="module-4/Stewart_Mod4_2.html">Assignment 4.2</a></li>
             <li><a href="module-6/Stewart_Mod6_2.html">Assignment 6.2</a></li>
+            <li><a href="module-8/Stewart_Mod8_2.html">Assignment 8.2</a></li>
         </ul>
         <h3>Projects</h3>
         <ul>
@@ -37,8 +40,10 @@
             <li><a href="https://www.w3schools.com/html/">HTML Tutorial</a></li>
             <li><a href="https://bruinconnect.bellevue.edu/">Bruin Connect</a></li>
         </ul>
-   </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" 
-    integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
