--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
         <h3>Projects</h3>
         <ul>
-            <li><a href="projects/biosite.html">bioSite Project Home Page</a></li>
+            <li><a href="https://rs691.github.io/bioSite/">bioSite Project Home Page</a></li>
         </ul>
         <h4>
             Important Links
