--- a/module-8/Stewart_Mod8_2.html
+++ b/module-8/Stewart_Mod8_2.html
@@ -15,7 +15,7 @@
         <h1>Assignment 8.2: Build a Web Page - Part 6</h1>
     </header>
     <div id="navbar">
-        <a href="index.html">Home</a>
+        <a href="../index.html">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
     </div>
