--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
             <li><a href="module-6/Stewart_Mod6_2.html">Assignment 6.2</a></li>
             <li><a href="module-8/Stewart_Mod8_2.html">Assignment 8.2</a></li>
             <li><a href="module-9/Stewart_Mod9_3.html">Assignment 9.3</a></li>
-        </ul>
-        <h3>Projects</h3>
-        <ul>
-            <li><a href="https://rs691.github.io/bioSite/">bioSite Project Home Page</a></li>
-        </ul>
-        <h4>
-            Important Links
-        </h4>
-        <ul>
-            <li><a href="https://validator.w3.org/">W3C HTML Validator</a></li>
-            <li><a href="http://jigsaw.w3.org/css-validator/">W3C CSS Validator</a></li>
-            <li><a href="https://www.w3schools.com/html/">HTML Tutorial</a></li>
-            <li><a href="https://bruinconnect.bellevue.edu/">Bruin Connect</a></li>
-        </ul>
+            <li><a href="module-10/Stewart_Mod10_3.html">Assignment 10.3</a></li>
+            <h3>Projects</h3>
+            <ul>
+                <li><a href="https://rs691.github.io/bioSite/">bioSite Project Home Page</a></li>
+            </ul>
+            <h4>
+                Important Links
+            </h4>
+            <ul>
+                <li><a href="https://validator.w3.org/">W3C HTML Validator</a></li>
+                <li><a href="http://jigsaw.w3.org/css-validator/">W3C CSS Validator</a></li>
+                <li><a href="https://www.w3schools.com/html/">HTML Tutorial</a></li>
+                <li><a href="https://bruinconnect.bellevue.edu/">Bruin Connect</a></li>
+            </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
