adding clickable event to Module 10

--- a/module-10/Stewart_Mod10_3.html
+++ b/module-10/Stewart_Mod10_3.html
@@ -21,7 +21,7 @@
     <div id="container">
         <h1>Assignment 10.3: JavaScript - Part 2</h1>
         <h2>Chapter 10: JavaScript</h2>
-        <h3 class="animate__animated animate__bounceInRight animate_repeat-4">Hover over the flower and watch it grow
+        <h3 class="animate__animated animate__bounceInRight animate_repeat-4">Click on the flower
         </h3>
     </div>
 
@@ -41,6 +41,7 @@
         <div class="dirt"></div>
     </div>
     <div class="dirt"></div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
