adding clickable event to Module 10 and fix

--- a/module-10/Stewart_Mod10_3.html
+++ b/module-10/Stewart_Mod10_3.html
@@ -26,7 +26,7 @@
     </div>
 
     <div class="flower-container">
-        <div class="hover-area"></div>
+        <div class="click-area" onClick="toggleFlower()"></div>
         <div class="flower">
             <div class="bloom">
                 <div class="center"></div>
