--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <li><a href="module-9/Stewart_Mod9_3.html">Assignment 9.3</a></li>
             <li><a href="module-10/Stewart_Mod10_3.html">Assignment 10.3</a></li>
             <li><a href="module-11/Stewart_Mod11_2.html">Assignment 11.2</a></li>
+            <li><a href="module-12/Stewart_Mod12_2.html">Assignment 12.2</a></li>
+            
             <h3>Projects</h3>
             <ul>
                 <li><a href="https://rs691.github.io/bioSite/">bioSite Project Home Page</a></li>
